--- a/A02_EventInspector/style.css
+++ b/A02_EventInspector/style.css
@@ -16,3 +16,10 @@ div {
     margin-right: 10%;
 }
 
+#mouseText {
+    position: fixed;
+    z-index: 3;
+    height: 50px;
+    width: 200px;
+    background-color: skyblue;
+}
