--- a/A02_EventInspector/style.css
+++ b/A02_EventInspector/style.css
@@ -22,4 +22,11 @@ div {
     height: 50px;
     width: 200px;
     background-color: skyblue;
+    display: none;
+}
+
+button {
+    background-color: yellow;
+    height: 50px;
+    width: 50px;
 }
