--- a/A03_ShoppingList/style.css
+++ b/A03_ShoppingList/style.css
@@ -1,14 +1,17 @@
 body {
     height: 100%;
     width: 100%;
+    background-color: black;
 }
 
 h1 {
     color: skyblue;
+    text-align: center;
 }
 
 h2 {
-    color: skyblue;
+    color: rgb(255, 255, 255);
+    text-align: center;
 }
 
 div { background-color: grey;
@@ -16,8 +19,28 @@ div { background-color: grey;
     width: 80%;
     margin-left: 10%;
     margin-right: 10%;
+    border: 0.3em;
+    border-color: rgb(255, 255, 255);
+    border-style: outset;
 }
 
 .textField {
     background-color: skyblue;
+    height: 3em;
+    width: 30%;
+    margin-top: 0.1em;
+    border: 0.1em;
+    border-color: rgb(255, 255, 255);
+    border-style: solid;
+}
+
+#addButton {
+    height: 3em;
+    width: 6%;
+    background-color: skyblue;
+    color: white;
+    border: 0.1em;
+    border-color: white;
+    border-style: solid;
+    margin-left: 0.5em;
 }
