--- a/A06_Einkaufsliste_DatabaseServer/style.css
+++ b/A06_Einkaufsliste_DatabaseServer/style.css
@@ -52,6 +52,18 @@ h2 {
     color: white;
 }
 
+.editfield {
+    position: relative;
+    justify-content: center;
+    align-items: center;
+    margin: auto;
+    display: flex;
+    width: max-content;
+    min-width: 40em;
+    height: 5em;
+    text-align: center;
+}
+
 #add {
     height: 3em;
     width: 11%;
